--- a/app/src/main/res/layout/user_post.xml
+++ b/app/src/main/res/layout/user_post.xml
@@ -9,162 +9,168 @@
     android:backgroundTint="#FFFFFF"
     >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        >
-        <ImageView
-            android:id="@+id/user_post_profile_pic"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_background" />
+        android:layout_height="wrap_content">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            >
+            <ImageView
+                android:id="@+id/user_post_profile_pic"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_launcher_background" />
 
-        <TextView
-            android:id="@+id/user_post_full_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:text="user_name"
-            android:textSize="18sp"
-            android:textColor="#2F2F2F"
-            android:textStyle="bold"
-            android:maxLines="1"
-            android:ellipsize="end"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/user_post_profile_pic"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/user_post_full_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="user_name"
+                android:textSize="18sp"
+                android:textColor="#2F2F2F"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/user_post_profile_pic"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/user_post_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:text="user_post_time"
-            android:maxLines="1"
-            android:ellipsize="end"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/user_post_full_name"
-            app:layout_constraintTop_toBottomOf="@+id/user_post_full_name" />
+            <TextView
+                android:id="@+id/user_post_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="user_post_time"
+                android:maxLines="1"
+                android:ellipsize="end"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/user_post_full_name"
+                app:layout_constraintTop_toBottomOf="@+id/user_post_full_name" />
 
-<!--        <ImageView-->
-<!--            android:backgroundTint="@color/white"-->
-<!--            android:id="@+id/user_post_option"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            android:layout_marginEnd="16dp"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:srcCompat="@drawable/ic_baseline_more_vert_24" />-->
+<!--            <ImageButton-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                android:id="@+id/user_post_option"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:layout_marginEnd="16dp"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:srcCompat="@drawable/ic_baseline_more_vert_24"-->
+<!--                />-->
 
-        <TextView
-            android:id="@+id/user_post_song_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="user_song_name"
-            android:textColor="#2F2F2F"
-            app:layout_constraintStart_toEndOf="@+id/user_post_song_play_button"
-            app:layout_constraintTop_toTopOf="@+id/user_post_song_play_button" />
+            <TextView
+                android:id="@+id/user_post_song_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="user_song_name"
+                android:textColor="#2F2F2F"
+                app:layout_constraintStart_toEndOf="@+id/user_post_song_play_button"
+                app:layout_constraintTop_toTopOf="@+id/user_post_song_play_button" />
 
-        <TextView
-            android:id="@+id/user_post_song_description"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ellipsize="end"
-            android:maxLines="4"
-            android:text="user_song_description"
-            android:textColor="#2F2F2F"
-            app:layout_constraintEnd_toEndOf="@+id/song_duration_tv2"
-            app:layout_constraintStart_toStartOf="@+id/user_post_song_play_button"
-            app:layout_constraintTop_toBottomOf="@+id/user_post_song_play_button" />
+            <TextView
+                android:id="@+id/user_post_song_description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ellipsize="end"
+                android:maxLines="4"
+                android:text="user_song_description"
+                android:textColor="#2F2F2F"
+                app:layout_constraintEnd_toEndOf="@+id/song_duration_tv2"
+                app:layout_constraintStart_toStartOf="@+id/user_post_song_play_button"
+                app:layout_constraintTop_toBottomOf="@+id/user_post_song_play_button" />
 
-        <ImageButton
-            android:id="@+id/user_post_song_play_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:padding="0dp"
-            android:backgroundTint="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/user_post_profile_pic"
-            app:srcCompat="@drawable/ic_baseline_play_circle_24" />
+            <ImageButton
+                android:id="@+id/user_post_song_play_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:padding="0dp"
+                android:backgroundTint="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/user_post_profile_pic"
+                app:srcCompat="@drawable/ic_baseline_play_circle_24" />
 
-<!--        <ImageButton-->
-<!--            android:id="@+id/user_post_song_pause_button"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:padding="0dp"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/user_post_profile_pic"-->
-<!--            app:srcCompat="@drawable/ic_baseline_pause_circle_24"-->
-<!--            android:visibility="gone"/>-->
+            <!--        <ImageButton-->
+            <!--            android:id="@+id/user_post_song_pause_button"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_marginStart="16dp"-->
+            <!--            android:layout_marginTop="8dp"-->
+            <!--            android:padding="0dp"-->
+            <!--            app:layout_constraintStart_toStartOf="parent"-->
+            <!--            app:layout_constraintTop_toBottomOf="@+id/user_post_profile_pic"-->
+            <!--            app:srcCompat="@drawable/ic_baseline_pause_circle_24"-->
+            <!--            android:visibility="gone"/>-->
 
-        <SeekBar
-            android:id="@+id/user_post_song_seek_bar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
-            android:paddingStart="6dp"
-            android:paddingEnd="6dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:secondaryProgressTint="@color/black"
-            android:progressBackgroundTint="@color/orange_500"
-            android:progressTint="@color/black"
-            app:layout_constraintEnd_toStartOf="@+id/song_duration_tv2"
-            app:layout_constraintStart_toEndOf="@+id/song_duration_tv"
-            app:layout_constraintTop_toTopOf="@+id/user_post_song_play_button" />
+            <SeekBar
+                android:id="@+id/user_post_song_seek_bar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
+                android:paddingStart="6dp"
+                android:paddingEnd="6dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:secondaryProgressTint="@color/black"
+                android:progressBackgroundTint="@color/orange_500"
+                android:progressTint="@color/black"
+                app:layout_constraintEnd_toStartOf="@+id/song_duration_tv2"
+                app:layout_constraintStart_toEndOf="@+id/song_duration_tv"
+                app:layout_constraintTop_toTopOf="@+id/user_post_song_play_button" />
 
-        <TextView
-            android:id="@+id/song_duration_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="00:00"
-            app:layout_constraintBottom_toBottomOf="@+id/user_post_song_seek_bar"
-            app:layout_constraintStart_toEndOf="@+id/user_post_song_play_button"
-            app:layout_constraintTop_toTopOf="@+id/user_post_song_seek_bar" />
+            <TextView
+                android:id="@+id/song_duration_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="00:00"
+                app:layout_constraintBottom_toBottomOf="@+id/user_post_song_seek_bar"
+                app:layout_constraintStart_toEndOf="@+id/user_post_song_play_button"
+                app:layout_constraintTop_toTopOf="@+id/user_post_song_seek_bar" />
 
-        <TextView
-            android:id="@+id/song_duration_tv2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00:00"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/user_post_song_seek_bar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/user_post_song_seek_bar" />
+            <TextView
+                android:id="@+id/song_duration_tv2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/user_post_song_seek_bar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/user_post_song_seek_bar" />
 
-        <!--        <ImageView-->
-<!--            android:id="@+id/user_post_nolike"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="4dp"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/user_post_song_description"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/user_post_song_description"-->
-<!--            app:srcCompat="@drawable/ic_baseline_favorite_border_24" />-->
+            <!--        <ImageView-->
+            <!--            android:id="@+id/user_post_nolike"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_marginTop="4dp"-->
+            <!--            app:layout_constraintStart_toStartOf="@+id/user_post_song_description"-->
+            <!--            app:layout_constraintTop_toBottomOf="@+id/user_post_song_description"-->
+            <!--            app:srcCompat="@drawable/ic_baseline_favorite_border_24" />-->
 
-<!--        <ImageView-->
-<!--            android:id="@+id/user_post_liked_song"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/user_post_song_description"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/user_post_song_description"-->
-<!--            app:srcCompat="@drawable/ic_baseline_favorite_24"-->
-<!--            android:visibility="gone"/>-->
+            <!--        <ImageView-->
+            <!--            android:id="@+id/user_post_liked_song"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            app:layout_constraintStart_toStartOf="@+id/user_post_song_description"-->
+            <!--            app:layout_constraintTop_toBottomOf="@+id/user_post_song_description"-->
+            <!--            app:srcCompat="@drawable/ic_baseline_favorite_24"-->
+            <!--            android:visibility="gone"/>-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
 </androidx.cardview.widget.CardView>
